# dob-prompt

./: .coveragerc  .editorconfig  .gitignore  .ignore.example  .readthedocs.yml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  MANIFEST.in  Makefile  README.rst  codecov.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
dob/prompters/: colors_terrific.py  hacky_processor.py  interface_bases.py  interface_bonds.py  interface_crown.py  interface_fanny.py  parts_suggester.py  prompt__awesome.py  prompt_actegory.py  prompt_tagcloud.py  prompter_common.py  sophisti_prompt.py  the_banner_area.py  the_bottom_area.py
dob_prompt/: __init__.py
dob_prompt/prompters/: __init__.py  colors_terrific.py  hacky_processor.py  interface_bases.py  interface_bonds.py  interface_crown.py  interface_fanny.py  parts_suggester.py  prompt__awesome.py  prompt_actegory.py  prompt_tagcloud.py  prompter_common.py  sophisti_prompt.py  the_banner_area.py  the_bottom_area.py
docs/: Makefile  conf.py  dob_prompt.helpers.rst  dob_prompt.prompters.rst  dob_prompt.rst  history-ci.md  make.bat  modules.rst
hamster_cli/prompters/: hacky_processor.py  interface_fanny.py  prompt__awesome.py  prompt_actegory.py  prompt_tagcloud.py  sophisti_prompt.py  the_bottom_area.py
requirements/: test.pip
tests/: __init__.py  conftest.py  factories.py  test_awesome_prompt.py  test_carousel.py  test_dob_prompt.py  test_integration_tests.py
tests/config/: __init__.py  envvar_prefix.py  init_app_dirs.py
