# This file exists within 'dob-prompt':
#
#   https://github.com/hotoffthehamster/dob-prompt
#
# Copyright © 2019-2020 Landon Bouma. All rights reserved.
#
# This program is free software:  you can redistribute it  and/or  modify it under the
# terms of the GNU General Public License as published by the Free Software Foundation,
# either version 3  of the License,  or  (at your option)  any later version  (GPLv3+).
#
# This program is distributed in the hope that it will be useful, but WITHOUT ANY
# WARRANTY;  without even the implied warranty of MERCHANTABILITY or  FITNESS FOR
# A PARTICULAR PURPOSE. See the GNU  General  Public  License  for  more  details.
#
# If you lost the GNU General Public License that ships with this software
# repository (read the 'LICENSE' file), see <http://www.gnu.org/licenses/>.

[metadata]
# NOTE: Values specified in setup.py will shadow those here.
#   Except there are no values in setup().
name = dob-prompt
author = HotOffThe Hamster
author-email = hotoffthehamster+dobprompt@gmail.com
home-page = https://github.com/hotoffthehamster/dob-prompt
description = journal and time tracker, supercharged for the terminal
# (lb): Note that - and _ and interchangeable, e.g.,
#         long-description is the
# same as long_description.
long-description = file: README.rst
long-description-content-type = text/x-rst; charset=UTF-8
project_urls =
    # Bug Tracker = https://bugs.launchpad.net/dob-prompt/
    Documentation = https://dob-prompt.readthedocs.io/en/latest/
    Source Code = https://github.com/hotoffthehamster/dob-prompt
license = GPLv3+
license-file = LICENSE
platform = any
classifier =
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    # FIXME/2018-06-13: Our goal (this Summer?): Production/Stable.
    # Development Status :: 2 - Pre-Alpha
    Development Status :: 3 - Alpha
    # Development Status :: 4 - Beta
    # Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python
    # Topic :: Artistic Software
    Topic :: Office/Business :: News/Diary
    # Topic :: Religion  # Because Hamster *is* is religion!
    Topic :: Text Processing
keywords =
    journal
    diary
    timesheet
    timetrack
    jrnl
    rednotebook
    todo.txt
    prjct
    hamster
    fact

[options]
zip_safe = false
# Enable setuptools_scm/use_scm_version.
setup_requires =
    setuptools
    setuptools_scm

[coverage:report]
precision = 0

[coverage:run]
branch = True
source = dob_prompt

[doc8]
ignore-path = .eggs/, *.egg-info/, .tox/, docs/_build/
max-line-length = 89
# Specify encoding lest doc8 think it's 'Windows-1254' and raise UnicodeDecodeError.
file-encoding = utf-8
# DEVs: Uncomment verbose for TMI.
#  verbose=1

# Babel i18n/l10n configuration.
#
# USAGE:
#
#   pip install Babel
#   python setup.py extract_messages
#
# SEE ALSO:
#
#   http://babel.pocoo.org/en/latest/setup.html#extract-messages
#
[extract_messages]
input_dirs = dob_prompt
output_file = messages.pot

[flake8]
exclude = build/*.py, docs/*.py
max-line-length = 89
# See list of error codes:
#  https://pycodestyle.readthedocs.io/en/latest/intro.html#error-codes
# Some of these are necessary, and some are just preferences.
# - ✗ E711 comparison to None should be 'if cond is None:'
#     (lb): SQLAlchemy filter function honors `== None`, not `is None`, e.g.,
#             query = query.filter(AlchemyFact.activity == None)
# - ✓ W391: blank line at end of file
#     (lb): Personal preference. So that, e.g., Vim's <C-End> is predictable
#             and goes to first column of an empty last line, rather than to
#             some unknown last column of a nonempty last line.
# - ✓ W503 line break before binary operator
#     (lb): I'm with Knuth, for readability, because columns align, prefer this:
#               if (some_thing
#                   and another
#                   and another_thing):
#             over this:
#               if (some_thing and
#                   another and
#                   another_thing):
# - ✓ W605 invalid escape sequence
#     (lb): Was warned on regex, e.g., '\d{2}' was flagged.
#     (lb): Was warned on escape in Click help string, e.g., 'blah \# blah'.
ignore = W391,W503,W605

[isort]
# See: setup.cfg's [flake8] max-line-length = 89.
line_length = 89
# multi_line_output: 3 - Vertical Hanging Indent.
multi_line_output = 3
not_skip = __init__.py
known_third_party =
    # SYNC_ME: setup.py:requirements
    apipkg
    future
    inflector
    pedantic_timedelta
    prompt_toolkit
    six
    # Testing packages.
    factory
    faker
    fauxfactory
    freezegun
    pytest
    pytest_factoryboy
# (lb): I tried putting gettext-as-_ after future imports, but the following
# config ends up with the import at end of STDLIB (default), so docs lie?
#   known_gettext=gettext
#   sections = FUTURE,GETTEXT,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
# Alternative is to use unused known group and place after blank link after stdlibs.
known_first_party = gettext
sections = FUTURE,STDLIB,FIRSTPARTY,THIRDPARTY,LOCALFOLDER

[tool:pytest]
addopt =
	--tb=short
	--strict
	--rsx

[bdist_wheel]
universal = 1

